# Zerocopy

./: .editorconfig  .gitignore  LICENSE  NOTICE  PROJECT_MAP.md  README.md  build.gradle.kts  build_all.sh  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ipc-bridge.cpp  mnn-bridge.cpp
app/src/main/java/com/gguf/zerocopy/: MainActivity.kt  ZeroCopyApp.kt
app/src/main/java/com/gguf/zerocopy/data/local/: SettingsManager.kt
app/src/main/java/com/gguf/zerocopy/data/repository/: ChatRepository.kt  ModelRepository.kt
app/src/main/java/com/gguf/zerocopy/domain/device/: DeviceUtils.kt
app/src/main/java/com/gguf/zerocopy/domain/inference/: EngineManager.kt  InferenceConfig.kt  InferenceEngine.kt  LiteRtEngine.kt  LlamaCppEngine.kt  MnnEngine.kt  NativeBridge.kt  RustCore.kt
app/src/main/java/com/gguf/zerocopy/ui/chat/: ChatScreen.kt  MarkdownText.kt
app/src/main/java/com/gguf/zerocopy/ui/download/: DownloadScreen.kt
app/src/main/java/com/gguf/zerocopy/ui/models/: ModelListScreen.kt
app/src/main/java/com/gguf/zerocopy/ui/sessions/: SessionListScreen.kt
app/src/main/java/com/gguf/zerocopy/ui/settings/: SettingsScreen.kt
app/src/main/java/com/gguf/zerocopy/ui/theme/: Theme.kt  ZcColors.kt
app/src/main/java/com/gguf/zerocopy/ui/welcome/: WelcomeScreen.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/test/java/com/gguf/zerocopy/: InferenceConfigTest.kt
gradle/: libs.versions.toml
rust_core/: Cargo.toml  build_android.sh
rust_core/src/: lib.rs  memory.rs  scheduler.rs
