[package]
name = "zerocopy-core"
version = "0.1.0"
edition = "2021"
description = "ZeroCopy inference engine core - Rust optimization layer for on-device LLM"

[lib]
name = "zerocopy_core"
crate-type = ["cdylib"]

[dependencies]
jni = { version = "0.21", features = ["invocation"] }
log = "0.4"
android_logger = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
